# penguins

./: .flake8  .gitignore  .hgignore  AUTHORS  Dockerfile  Dockerfile.debian  LICENSE  Procfile  README.md  cronjobs  example-supervisor.conf  gunicorn.py  jenkins.sh  manage.py  nginx.conf  pyproject.toml  pyrightconfig.json  requirements.txt
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  image-build-scan.yml  multi-build.yaml  run-tests.yml
kustomize/: README.md
kustomize/base/: cronjob_import.yaml  deployment.yaml  deployment_hpa.yaml  kustomization.yaml  service.yaml
kustomize/overlays/prod/: cronjob_import_patch.yaml  deployment_hpa_patch.yaml  deployment_patch.yaml  ingress.yaml  kustomization.yaml  pdb.yaml  service_patch.yaml
kustomize/overlays/uat/: cronjob_import_patch.yaml  deployment_hpa_patch.yaml  deployment_patch.yaml  ingress.yaml  kustomization.yaml  pdb.yaml  service_patch.yaml
ldap_email_auth/: __init__.py  auth.py  ldap_settings.py
observations/: admin.py  api.py  forms.py  models.py  sites.py  tasks.py  tests.py  urls.py  utils.py  views.py
observations/fixtures/: initial_data.json  newdata.json
observations/management/: __init__.py
observations/migrations/: 0001_initial.py  0002_alter_video_completed_by.py  0002_auto_20230626_0903.py  0002_auto__add_camera__add_penguinobservation__del_field_video_video_file__.py  0002_auto__add_field_video_mark_complete.py  0003_auto__add_field_penguinobservation_position__add_field_penguinobservat.py  0003_auto__chg_field_penguincount_observer__del_unique_penguincount_observe.py  0003_rename_video_seen_counted.py  0004_add_camera_to_count.py  0004_auto.py  0004_rename_video_file_uploaded_file.py  0005_add_date_to_video.py  0005_auto__chg_field_penguinobservation_observer__chg_field_video_name.py  0005_remove_penguinobservation_date_and_more.py  0006_FIXM2M.py  0006_make_start_and_end_just_time.py  0007_FIXM2M_2.py  0007_add_penguin_observation_rename_video.py  0008_add_camera_to_penguin_observation.py  0008_addstoredprocedure.py  0009_add_site_to_models.py  0009_mergecameras.py  0010_add_site_to_observation.py  0010_auto__add_field_camera_camera_key.py  0011_camera_keys_etc.py  0011_remove_civil_twilight.py  0012_auto__add_field_penguinobservation_validated.py  0012_remove_civil_twilight.py  0013_remove_camera_from_penguin_count.py  0014_add_count.py  0015_add_environmental_conditions.py  0016_remove_observer_counter.py  0017_add_rain_to_observation.py
observations/templates/: s3_view.html
observations/tests/: test_models.py  test_views.py
penguins/: admin.py  celery.py  context_processors.py  middleware.py  settings.py  urls.py  utils.py  wsgi.py
penguins/templates/: base_penguins.html  help_page.html  logged_out.html  login.html
penguins/tests/: test_utils.py
utils/: archive_uploaded.py  clean.sh  convert_and_upload.py  import_data.py  video_datefmt.py
utils/.ropeproject/: globalnames
(+53 files in other folders)
