[project]
name = "penguins"
version = "2.0.1"
description = "DBCA Little Penguins Observations application"
authors = ["Ashley Felton <ashley.felton@dbca.wa.gov.au>"]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
  "django==4.2.20",
  "psycopg[binary,pool]==3.2.5",
  "dbca-utils==2.0.3",
  "python-dotenv==1.0.1",
  "dj-database-url==2.3.0",
  "gunicorn==23.0.0",
  "django-extensions==3.2.3",
  "webtemplate-dbca==1.7.2",
  "whitenoise[brotli]==6.9.0",
  "django-storages[azure]==1.14.5",
  "django-map-widgets==0.5.1",
  "xlsxwriter==3.2.2",
]

[dependency-groups]
dev = ["ipython>=8.31.0", "pre-commit>=4.0.1"]

# Reference: https://docs.astral.sh/ruff/configuration/
[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = [
  "E501", # Line too long
  "E722", # Bare except
]

# Reference: https://www.djlint.com/docs/configuration/
[tool.djlint]
profile = "django"
