[project]
name = "penguins"
version = "2.1.3"
description = "DBCA Little Penguins Observations application"
authors = ["Ashley Felton <ashley.felton@dbca.wa.gov.au>"]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
  "django==5.2.9",
  "psycopg[binary,pool]==3.3.2",
  "dbca-utils==2.1.5",
  "python-dotenv==1.2.1",
  "dj-database-url==3.0.1",
  "gunicorn==23.0.0",
  "django-extensions==4.1",
  "webtemplate-dbca==1.8.3",
  "whitenoise[brotli]==6.11.0",
  "django-storages[azure]==1.14.6",
  "django-map-widgets==0.5.1",
  "xlsxwriter==3.2.9",
]

[dependency-groups]
dev = ["ipython>=9.8.0", "ipdb>=0.13.13", "mixer>=7.2.2", "pre-commit>=4.5.1"]

# Reference: https://docs.astral.sh/ruff/configuration/
[tool.ruff]
line-length = 140

[tool.ruff.lint]
ignore = [
  "E501", # Line too long
  "E722", # Bare except
]

# Reference: https://www.djlint.com/docs/configuration/
[tool.djlint]
profile = "django"
